--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,3 +333,18 @@ ul {
     display: flex;
     justify-content: space-around;
 }
+
+.help_button {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 1px solid rgba(14, 165, 233, 1);
+    color: RGBA(14, 165, 233, 1);
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+.help_button:hover {
+    background-color: rgba(14, 165, 233, 1);
+    color: #F8FAFC;
+}
